deployement/k8s/aks-test-app/static-site.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-site-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: static-site
  template:
    metadata:
      labels:
        app: static-site
    spec:
      containers:
      - name: static-site
        image: dockersamples/static-site
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: static-site
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: static-site
  type: LoadBalancer
